--- a/config/config_updated.json
+++ b/config/config_updated.json
@@ -18,9 +18,15 @@
             "kaon_data_path" : "/sciclone/data10/jgiroux/Cherenkov/Validation_Hit_Level_Kaons_from_Phi_March6.csv"
         },
         "testing":{
+	    "DLL":{
+            "pion_data_path" : "/sciclone/data10/jgiroux/Cherenkov/Testing_Hit_Level_Pions_from_Rho_March6.pkl",
+            "kaon_data_path" : "/sciclone/data10/jgiroux/Cherenkov/Testing_Hit_Level_Kaons_from_Phi_March6.pkl"
+	    },
+	    "gen":{
             "pion_data_path" : "/sciclone/data10/jgiroux/Cherenkov/Testing_Hit_Level_Pions_from_Rho_March6.csv",
             "kaon_data_path" : "/sciclone/data10/jgiroux/Cherenkov/Testing_Hit_Level_Kaons_from_Phi_March6.csv"
         }
+	}
     },
     "lr_scheduler": {
         "step_size":25,
@@ -50,8 +56,8 @@
     },
     "Inference": {
             "samples": 100,
-            "kaon_model_path":"C:\\Users\\James-PC\\James\\EIC\\Cherenkov_FastSim\\Trained_Models\\CherenkovFlow_V3_Kaons_Smeared___Feb-26-2024\\CherenkovFlow_V3_Kaons_Smeared_epoch99_val_loss_0.053775.pth",
-            "pion_model_path":"C:\\Users\\James-PC\\James\\EIC\\Cherenkov_FastSim\\Trained_Models\\CherenkovFlow_V3_Pions_Smeared___Feb-26-2024\\CherenkovFlow_V3_Pions_Smeared_epoch59_val_loss_0.057222.pth",
+            "kaon_model_path":"/sciclone/data10/jgiroux/Cherenkov/FastSim_Models/GaussianSmear_Kaons___Mar-06-2024/GaussianSmear_Kaons_epoch20_val_loss_0.024175.pth",
+            "pion_model_path":"/sciclone/data10/jgiroux/Cherenkov/FastSim_Models/GaussianSmear_Pions___Mar-06-2024/GaussianSmear_Pions_epoch22_val_loss_0.023239.pth",
             "out_dir": "path\\to\\Inference"
         }
 }
