--- a/config/config_updated.json
+++ b/config/config_updated.json
@@ -1,10 +1,10 @@
 {
-    "name": "GaussianSmear_Kaons",
+    "name": "Pion_3Layers_300Epochs",
     "seed": 752022,
     "run_val":1,
-    "method":"Kaon",
+    "method":"Pion",
     "model": {
-       "num_layers":8,
+       "num_layers":3,
        "input_shape":3,
        "cond_shape":3
    },
@@ -33,12 +33,12 @@
         "gamma": 0.1
     },
     "optimizer": {
-        "lr": 1e-4,
+        "lr": 1e-3,
     	"KL_scale":0.0005,
         "cost_scale":1e-4,
         "mmd_scale":1.2
     },
-    "num_epochs": 100,
+    "num_epochs": 300,
     "dataloader": {
         "split":[0.7,0.15,0.15],
         "train": {
