--- a/config/config_updated.json
+++ b/config/config_updated.json
@@ -1,10 +1,10 @@
 {
-    "name": "Pion_3Layers_300Epochs",
+    "name": "Pion_8Layers3Blocks_300Epochs",
     "seed": 752022,
     "run_val":1,
     "method":"Pion",
     "model": {
-       "num_layers":3,
+       "num_layers":8,
        "input_shape":3,
        "cond_shape":3
    },
@@ -33,7 +33,7 @@
         "gamma": 0.1
     },
     "optimizer": {
-        "lr": 1e-3,
+        "lr": 1e-4,
     	"KL_scale":0.0005,
         "cost_scale":1e-4,
         "mmd_scale":1.2
