--- a/config/config_updated.json
+++ b/config/config_updated.json
@@ -1,17 +1,17 @@
 {
-    "name": "Pion_8Layers3Blocks_300Epochs",
+    "name": "Kaon_Affine300Epochs_16Layers",
     "seed": 752022,
     "run_val":1,
-    "method":"Pion",
+    "method":"Kaon",
     "model": {
-       "num_layers":8,
+       "num_layers":16,
        "input_shape":3,
        "cond_shape":3
    },
     "dataset": {
         "training": {
-            "pion_data_path" : "/sciclone/data10/jgiroux/Cherenkov/Training_Hit_Level_Pions_from_Rho_March6.csv",
-            "kaon_data_path" : "/sciclone/data10/jgiroux/Cherenkov/Training_Hit_Level_Kaons_from_Phi_March6.csv"
+            "pion_data_path" : "/sciclone/data10/jgiroux/Cherenkov/Pions_Train_Presmear.csv",
+            "kaon_data_path" : "/sciclone/data10/jgiroux/Cherenkov/Kaons_Train_Presmear.csv"
         },
         "validation":{
             "pion_data_path" : "/sciclone/data10/jgiroux/Cherenkov/Validation_Hit_Level_Pions_from_Rho_March6.csv",
@@ -33,7 +33,7 @@
         "gamma": 0.1
     },
     "optimizer": {
-        "lr": 1e-4,
+        "lr": 7e-4,
     	"KL_scale":0.0005,
         "cost_scale":1e-4,
         "mmd_scale":1.2
@@ -56,7 +56,7 @@
     },
     "Inference": {
             "samples": 100,
-            "kaon_model_path":"/sciclone/data10/jgiroux/Cherenkov/FastSim_Models/GaussianSmear_Kaons___Mar-06-2024/GaussianSmear_Kaons_epoch20_val_loss_0.024175.pth",
+            "kaon_model_path":"/sciclone/data10/jgiroux/Cherenkov/FastSim_Models/Kaon_AffineTest___Mar-22-2024/Kaon_AffineTest_epoch99_val_loss_0.063166.pth",
             "pion_model_path":"/sciclone/data10/jgiroux/Cherenkov/FastSim_Models/GaussianSmear_Pions___Mar-06-2024/GaussianSmear_Pions_epoch22_val_loss_0.023239.pth",
             "out_dir": "path\\to\\Inference"
         }
