--- a/config/config_updated.json
+++ b/config/config_updated.json
@@ -1,8 +1,11 @@
 {
-    "name": "Kaon_Affine300Epochs_8Layers_512Nodes_UpdatedData_IncreasedEmbed",
+    "name": "TEST",
     "seed": 752022,
     "run_val":1,
     "method":"Kaon",
+    "log_time": 0,
+    "datatype": "Simulation",
+    "stats": {"x_max": 898,"x_min":0,"y_max":298,"y_min":0,"time_max":500.00,"time_min":0.0},
     "model": {
        "num_layers":8,
        "input_shape":3,
