--- a/config/real_config.json
+++ b/config/real_config.json
@@ -1,8 +1,8 @@
 {
-    "name": "Pions_ExpTails_150ns",
+    "name": "Kaons_ExpTails_150ns",
     "seed": 752022,
     "run_val":1,
-    "method":"Pion",
+    "method":"Kaon",
     "datatype": "Real",
     "log_time": 0,
     "stats": {"x_max": 898,"x_min":0,"y_max":298,"y_min":0,"time_max":150.00,"time_min":0.0},
