--- a/config/real_config.json
+++ b/config/real_config.json
@@ -5,7 +5,7 @@
     "method":"Pion",
     "datatype": "Real",
     "log_time": 0,
-    "stats": {"x_max": 898,"x_min":0,"y_max":298,"y_min":0,"time_max":150.00,"time_min":0.0},
+    "stats": {"x_max": 898,"x_min":0,"y_max":298,"y_min":0,"time_max":150.00,"time_min":0.0,"P_max":8.5 ,"P_min":0.95 ,"theta_max": 11.63,"theta_min": 0.90,"phi_max": 175.5, "phi_min":-176.0},
     "model": {
        "num_layers":8,
        "input_shape":3,
