--- a/config/inv_mass_config.json
+++ b/config/inv_mass_config.json
@@ -2,7 +2,7 @@
     "name": "Pion_Affine_InvMassCuts_Simulation_Mask",
     "seed": 752022,
     "run_val":1,
-    "method":"Kaon",
+    "method":"Pion",
     "datatype": "Simulation",
     "log_time":0,
     "stats": {"x_max": 898,"x_min":0,"y_max":298,"y_min":0,"time_max":500.00,"time_min":0.0,"P_max":8.5 ,"P_min":0.95 ,"theta_max": 11.63,"theta_min": 0.90,"phi_max": 175.5, "phi_min":-176.0},
@@ -72,6 +72,7 @@
     "Inference": {
             "gen_dir": "Figures/MCMC_Test",
             "samples": 1,
+            "pion_model_path": "/sciclone/data10/jgiroux/Cherenkov/FastSim_Models/Pion_Affine_InvMassCuts_Simulation_Mask___May-01-2024/Pion_Affine_InvMassCuts_Simulation_Mask_epoch144_val_loss_-0.201119.pth",
             "kaon_model_path": "/sciclone/data10/jgiroux/Cherenkov/FastSim_Models/Kaon_Affine_InvMassCuts_Simulation_Mask___May-01-2024/Kaon_Affine_InvMassCuts_Simulation_Mask_epoch156_val_loss_-0.128438.pth",
             "kaon_model_path_Tanh": "C:\\Users\\James\\EIC\\Cherenkov_FastSim\\Trained_Models\\Kaon_Affine_300Epochs_Tanh___Apr-18-2024\\Kaon_Affine_300Epochs_Tanh_epoch103_val_loss_-0.072783.pth",
             "pion_model_path_GOOD": "C:\\Users\\James\\EIC\\Cherenkov_FastSim\\Trained_Models\\Pion_Affine300Epochs_8Layers_512Nodes_UpdatedData___Apr-04-2024\\Pion_Affine300Epochs_8Layers_512Nodes_UpdatedData_epoch215_val_loss_-0.153051.pth",
