Initial push for diffusion stuff.

--- a/config/hpDIRC_config_clean.json
+++ b/config/hpDIRC_config_clean.json
@@ -1,5 +1,5 @@
 {
-    "name": "FlowMatchingAffineTest",
+    "name": "PScore6L_T100_cosine",
     "seed": 752022,
     "run_val":1,
     "method":"Kaon",
@@ -28,6 +28,35 @@
         "cond_shape":2,
         "num_blocks":2,
         "hidden_nodes": 128
+    },
+    "model_Score":{
+        "num_layers":6,
+        "input_shape":3,
+        "cond_shape":2,
+        "num_embed":32,
+        "hidden_dim": 128,
+        "num_steps":100,
+        "noise_schedule":"cosine",
+        "learned_schedule_net_hidden_dim":512,
+        "gamma":0
+    },
+    "model_DDPM":{
+        "num_layers":12,
+        "input_shape":3,
+        "cond_shape":2,
+        "num_embed":32,
+        "num_steps":100,
+        "hidden_dim": 128
+    },
+    "model_GSGM":{
+        "num_layers":6,
+        "input_shape":3,
+        "cond_shape":3,
+        "num_steps":75,
+        "num_embed":32,
+        "hidden_dim": 128,
+        "learned_variance":0,
+        "nonlinear_noise_schedule":0
     },
     "dataset": {
         "fixed_point":{
@@ -75,6 +104,7 @@
         "lr_NF": 1e-4,
         "lr_CNF": 1e-3,
         "lr_FlowMatching": 1e-3,
+        "lr_Score":3e-4,
         "weight_decay": 0.0,
         "alpha": 1e-3
     },
@@ -84,12 +114,14 @@
         "train": {
             "batch_size_NF": 2048,
             "batch_size_CNF": 10000,
-            "batch_size_FlowMatching": 10000
+            "batch_size_FlowMatching": 10000,
+            "batch_size_Score":2048
     	},
         "val": {
             "batch_size_NF": 2048,
             "batch_size_CNF": 10000,
-            "batch_size_FlowMatching": 10000
+            "batch_size_FlowMatching": 10000,
+            "batch_size_Score":2048
         },
         "test": {
             "batch_size": 25
