--- a/config/hpDIRC_config_gulf.json
+++ b/config/hpDIRC_config_gulf.json
@@ -131,10 +131,10 @@
             "samples": 1,
             "pion_model_path_Score":"/sciclone/data10/mcmartinez/hpDIRC_Models/PScore_6L_T100_cosine___Jan-18-2025/PScore_6L_T100_cosine_epoch111_train_loss_0.228536.pth",
             "kaon_model_path_Score":"/sciclone/data10/mcmartinez/hpDIRC_Models/KScore_6L_T100_cosine___Jan-24-2025/KScore_6L_T100_cosine_epoch131_train_loss_0.229118.pth",
-            "pion_model_path_GSGM":"",
-            "kaon_model_path_GSGM":"",
+            "pion_model_path_GSGM":"/sciclone/data10/mcmartinez/hpDIRC_Models/PGSGM_4L_T100___Jan-23-2025/PGSGM_4L_T100_epoch121_train_loss_44.389694.pth",
+            "kaon_model_path_GSGM":"/sciclone/data10/mcmartinez/hpDIRC_Models/KGSGM_4L_T100___Jan-28-2025/KGSGM_4L_T100_epoch96_train_loss_6.572339.pth",
             "out_dir": "Inference/OTFlow_FullTrain_v2_6GeV_TestRevKinScale",
             "generation_dir": "/sciclone/data10/jgiroux/Cherenkov/ParticleGun/Generated_Data/NF_Generated",
-            "fixed_point_dir": "/sciclone/data10/mcmartinez/hpDIRC/Inference/Score6L_T100_cosine_9GeV"
+            "fixed_point_dir": "/sciclone/data10/mcmartinez/hpDIRC/Inference/GSGM_4L_T100_3GeV"
         }
 }
